--- a/game/ballistic.html
+++ b/game/ballistic.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Ballistic Unblocked: Play Now for Free on 76 Unblocked Games</title>
-        <meta name="description" content="
+        <meta name="description" content="Explore the science and dynamics of Ballistic motion, covering principles, applications, and real-world use cases with accuracy and depth."/>
        
             
         <meta name="title" content="Ballistic">
