--- a/game/basketball-stars.html
+++ b/game/basketball-stars.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Basketball Stars Unblocked: Play Now for Free on 76 Unblocked Games</title>
+        <title>Basketball Stars Unblocked: Play Basketball Stars  At 76 Unblocked Games</title>
         <meta name="description" content="Discover the journey, skills, and achievements of a rising basketball star. Follow their path to success on and off the court."/>
         
         <meta name="title" content="Street Ball Star">
