--- a/game/bob-the-robber-4.html
+++ b/game/bob-the-robber-4.html
@@ -4,8 +4,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Bob The Robber 4 Unblocked: Play Now for Free on FAF Games</title>
-        <meta name="description" content="
+        <title>Bob The Robber 4 Unblocked: Play Bob The Robber 4 at 76 Unblocked Games</title>
+        <meta name="description" content="Join Bob in Bob The Robber 4 as he sneaks through secret locations, solves puzzles, and pulls off the perfect heist. Play online now!"/>
         
         <meta name="news_keywords" content="bob the robber 3
         bob the robber 5
@@ -16,9 +16,9 @@
         bob the robber 4 season 3 
         bob the robber 4 hacked
         bob the robber 4 season 2">
-       <meta name="author" content="FAF Games Team">
+       <meta name="author" content="76 Unblocked Games">
         <link rel="canonical" href="/game/bob-the-robber-4.html" />
-	<meta name="publisher" content="FAF Games Team">
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -311,7 +311,7 @@
         <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="FAF Games" /></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="76 Unblocked Games" /></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -767,7 +767,7 @@
                          <div class="col-lg-4 col-md-6 col-sm-12">
                              <div class="single-footer">
                                  <h3>About us</h3>
-                                <p>Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">FAF Games</a>. Join FAF Games today and start playing!</p>
+                                <p>Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">76 Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                              </div>
                          </div>
                          <div class="col-lg-5 col-md-6 col-sm-12">
@@ -827,7 +827,7 @@
                              <div class="footer-bottom-inn">
                                  <div class="footer-logo">
                                      <a href="../index.html">
-                                         <img src="../assets/img/logo.png" alt="FAF Games" />
+                                         <img src="../assets/img/logo.png" alt="76 Unblocked Games" />
                                      </a>
                                  </div>
                                  <div class="footer-social">
@@ -839,7 +839,7 @@
                                      </ul>
                                  </div>
                                  <div class="copyright">
-                                     <p>&copy; Copyrights 2020 FAF GAMES - All Rights Reserved</p>
+                                     <p>&copy; Copyrights 2020 76 Unblocked Games - All Rights Reserved</p>
                                  </div>
                              </div>
                          </div>
