--- a/game/burnin-rubber.html
+++ b/game/burnin-rubber.html
@@ -5,7 +5,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="description" content="
+      <meta name="description" content="Experience the thrill of Burnin Rubber, the explosive racing game packed with high-speed chases, powerful weapons, and non-stop action."/>
 	      
       <meta name="keyword" content="  burnin rubber 5
       burnin' rubber 4
@@ -14,12 +14,12 @@
       burnin rubber game
       burnin rubber 2
       burnin' rubber poki">
-      <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/burnin-rubber.html" />
-	<meta name="publisher" content="FAF Games Team">
+      <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/burnin-rubber.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
       <!-- Title -->
-      <title>Burnin Rubber Unblocked: Play Now for Free on FAF Games</title>
+      <title>Burnin Rubber Unblocked: Play Now for Free on 76 Unblocked Games</title>
       <!-- Favicon -->
       <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
              <!--Bootstrap css-->
@@ -309,7 +309,7 @@
     <!-- Header Area Start -->
     <nav class="fag-header navbar navbar-expand-lg">
       <div class="container">
-          <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+          <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="menu-toggle"></span>
           </button>
@@ -1219,7 +1219,7 @@
                      <div class="col-lg-4 col-md-6 col-sm-12">
                          <div class="single-footer">
                              <h3>About us</h3>
-                            <p>Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">FAF Games</a>. Join FAF Games today and start playing!</p>
+                            <p>Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">76 Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                          </div>
                      </div>
                      <div class="col-lg-5 col-md-6 col-sm-12">
@@ -1279,7 +1279,7 @@
                          <div class="footer-bottom-inn">
                              <div class="footer-logo">
                                  <a href="../index.html">
-                                     <img src="../assets/img/logo.png" alt="FAF Games" />
+                                     <img src="../assets/img/logo.png" alt="76 Unblocked Games" />
                                  </a>
                              </div>
                              <div class="footer-social">
@@ -1291,7 +1291,7 @@
                                  </ul>
                              </div>
                              <div class="copyright">
-                                 <p>&copy; Copyrights 2020 FAF GAMES - All Rights Reserved</p>
+                                 <p>&copy; Copyrights 2020 76 Unblocked Games - All Rights Reserved</p>
                              </div>
                          </div>
                      </div>
