--- a/game/burnin-rubber.html
+++ b/game/burnin-rubber.html
@@ -1261,7 +1261,7 @@
                              </div>
                              <div class="footer-contact">
                                  <h4 class="title"><i class="fa fa-envelope"></i>Email Address</h4>
-                                 <p>info@fafgames.com</p>
+                                 <p>info@76unblockedgames.com</p>
                              </div>
                              <div class="footer-contact">
                                  <h4 class="title"><i class="fa fa-phone"></i>Phone </h4>
