--- a/2-player-games/index.html
+++ b/2-player-games/index.html
@@ -690,7 +690,7 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2025 76-Unblocked-GAMES - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
