--- a/game/survival-race.html
+++ b/game/survival-race.html
@@ -3,6 +3,20 @@
 <html lang="en-US">
 <head>
           <title>Survival Race Unblocked: Play Now for Free on FAF Games</title>
+	<script>
+		(function() {
+    // Current full URL
+    var currentURL = window.location.href;
+
+    // Fix the URL: remove repeated slashes after the domain (except '://')
+    var cleanedURL = currentURL.replace(/([^:]\/)\/+/g, "$1");
+
+    // If the cleaned URL is different, redirect to the cleaned URL
+    if (currentURL !== cleanedURL) {
+      window.location.replace(cleanedURL);
+    }
+  })();
+	</script>	
     <link rel="icon" href="images/icon-red.png" type="image/gif" sizes="16x16">
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
