--- a/game/drift-boss.html
+++ b/game/drift-boss.html
@@ -7,12 +7,12 @@
       <meta name="description" content=" Play Drift Boss, the top drifting game! Navigate sharp turns, master challenging tracks, and show off your drifting skills. Perfect for all skill levels—easy to learn, hard to master!">
      <meta name="keywords" content="drift boss, online drifting game, drift boss unblocked, drift car game, play drift boss, drift boss tips, free drifting game, drift boss game, drift boss high score, drift boss online, drift games, easy drifting game, drift boss levels, drift boss play now, car drifting, simple drifting game, drift boss challenge, drift boss strategies, drift boss unblocked games, drift boss online game" />
 
-      <meta name="author" content="FAF Games Team">
-       <link rel="canonical" href="/game/drift-boss.html" />
-	<meta name="publisher" content="FAF Games Team">
+      <meta name="author" content="76 Unblocked Games">
+       <link rel="canonical" href="https://76-unblockedgames.github.io/game/drift-boss.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
       <!-- Title -->
-      <title>Drift Boss unblocked: Play Now for Free on FAF Games</title>
+      <title>Drift Boss unblocked: Play Drift Boss at 76 Unblocked Games</title>
       <!-- Favicon -->
       <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
              <!--Bootstrap css-->
@@ -302,9 +302,9 @@
   "genre": ["Racing", "Drifting"],
   "publisher": {
     "@type": "Organization",
-    "name": "FAF Games Team"
+    "name": "76 Unblocked Games"
   },
-	"image": "https://faf-games.github.io/assets/img/driftboss/logo.jpeg",
+	"image": "https://76-unblockedgames.github.io/assets/img/driftboss/drift-boss-logo.webp",
   "operatingSystem": "Any web browser",
   "applicationCategory": "Game",
   "aggregateRating": {
@@ -320,7 +320,7 @@
   },
   "author": {
     "@type": "Organization",
-    "name": "FAF Games Team"
+    "name": "76 Unblocked Games"
   }
 }
 </script>
@@ -337,7 +337,7 @@
     <!-- Header Area Start -->
     <nav class="fag-header navbar navbar-expand-lg">
       <div class="container">
-          <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+          <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="menu-toggle"></span>
           </button>
@@ -1273,7 +1273,7 @@
 
     <h2>Drift Boss Unblocked: Master the Art of Drifting Anywhere</h2>
 
-    <p>Ever wanted to test your drifting <a href="https://faf-games.github.io/skill/index.html">Skill</a> in a game that is fun, challenging, and a little bit addictive? Look no further than Drift Boss! This simple yet engaging game lets you drift around tight corners, testing your reaction time and precision. But what happens when the game is blocked at school or work? That’s where Drift Boss unblocked comes in. Now you can drift to your heart’s content, no matter where you are.</p>
+    <p>Ever wanted to test your drifting <a href="https://76-unblockedgames.github.io/skill/index.html">Skill</a> in a game that is fun, challenging, and a little bit addictive? Look no further than Drift Boss! This simple yet engaging game lets you drift around tight corners, testing your reaction time and precision. But what happens when the game is blocked at school or work? That’s where Drift Boss unblocked comes in. Now you can drift to your heart’s content, no matter where you are.</p>
 
     <h2>What is Drift Boss?</h2>
     <p>Drift Boss is a one-button drifting game where your main goal is to keep your car from flying off the track while drifting around corners. The challenge lies in timing your drifts perfectly—too early or too late, and your car will veer off the platform. It’s easy to learn but difficult to master, which is why it’s so addicting. Each corner you successfully drift around earns you points, and the longer you stay on the track, the more you can rack up.</p>
@@ -1288,7 +1288,7 @@
     <h2>How to Play Drift Boss Unblocked</h2>
     <p>Here’s how you can start playing Drift Boss unblocked right away:</p>
     <ul>
-        <li><strong>Search for Drift Boss Unblocked:</strong> A quick Google search for <a href="https://faf-games.github.io/game/drift-boss.html">Drift Boss Unblocked</a> will lead you to websites hosting the game without restrictions.</li>
+        <li><strong>Search for Drift Boss Unblocked:</strong> A quick Google search for <a href="https://76-unblockedgames.github.io/game/drift-boss.html">Drift Boss Unblocked</a> will lead you to websites hosting the game without restrictions.</li>
         <li><strong>Start Drifting:</strong> Once you find a site, the game loads up quickly. The controls are super simple—just click or tap to drift around each corner. The goal is to time your drifts just right to stay on the track.</li>
         <li><strong>Stay Focused:</strong> The track becomes more challenging as you progress, so staying focused and reacting quickly is key to getting a high score.</li>
     </ul>
@@ -1306,7 +1306,7 @@
     </ul>
 
     <h2>Drift Boss Unblocked: Play Without Limits</h2>
-    <p>If you’re at school or work and need a quick break, Drift Boss <a href="https://faf-games.github.io">Unblocked Games</a> is the perfect way to have some fun without getting caught up in complex gameplay. Its easy controls, combined with the challenge of perfectly timed drifts, make it an irresistible choice for casual gamers.</p>
+    <p>If you’re at school or work and need a quick break, Drift Boss <a href="https://76-unblockedgames.github.io/">Unblocked Games</a> is the perfect way to have some fun without getting caught up in complex gameplay. Its easy controls, combined with the challenge of perfectly timed drifts, make it an irresistible choice for casual gamers.</p>
 
 
 
@@ -1326,7 +1326,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -1372,7 +1372,7 @@
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games- All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
