--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2025 76 Unblocked Games - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2025 76-Unblocked-Games - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
