--- a/index.html
+++ b/index.html
@@ -1278,6 +1278,9 @@
     <script src="assets/js/main.js"></script>
     <!--Search Bar js-->
     <script src="assets/js/script.js"></script>
+    <!-- path      -->
+    <script src="/assets/js/fix-paths.js"></script>
+
 
 
 
