--- a/skill/index.html
+++ b/skill/index.html
@@ -972,6 +972,8 @@ Skill games are competitive games where the outcome is determined by the player'
     <script src="../assets/js/clock-custom.js"></script>
     <!--Main js-->
     <script src="../assets/js/main.js"></script>
+    <!-- path     -->
+    <script src="/assets/js/fix-paths.js"></script>
 
        
 </body>
