--- a/2-player-games/index.html
+++ b/2-player-games/index.html
@@ -725,6 +725,8 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
     <script src="../assets/js/main.js"></script>
      <!--Search Bar js-->
     <script src="assets/js/script.js"></script>
+     <!-- path     -->
+    <script src="/assets/js/fix-paths.js"></script>
 
 
 
