--- a/adventure/index.html
+++ b/adventure/index.html
@@ -581,6 +581,8 @@
     <script src="../assets/js/clock-custom.js"></script>
     <!--Main js-->
     <script src="../assets/js/main.js"></script>
+     <!-- path     -->
+    <script src="/assets/js/fix-paths.js"></script>
 
       
 </body>
