--- a/game/tank-trouble.html
+++ b/game/tank-trouble.html
@@ -904,7 +904,7 @@
         <script src="../assets/js/nouislider.min.js"></script>
         <!-- Isotop Js -->
         <script src="../assets/js/isotope.pkgd.min.js"></script>
-        <script src="../assets/js/custom-isotop.js"></script>
+<!--         <script src="../assets/js/custom-isotop.js"></script> -->
         <!--Main js-->
         <script src="../assets/js/main.js"></script>
          <script>
